매물 기능과 다른 코드 연동. 오류 수정